fixes navbar dropdown not showing on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -442,6 +442,11 @@ section {
 # Mobile Navigation
 --------------------------------------------------------------*/
 @media (max-width: 1279px) {
+
+    .header .logo img {
+        max-height: 15vw;
+    }
+
   .navbar {
     position: fixed;
     top: 0;
@@ -458,7 +463,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(27, 47, 69, 0.9);
+    background: rgba(0, 0, 0, 0.9);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -473,7 +478,7 @@ section {
     font-family: var(--font-default);
     font-size: 15px;
     font-weight: 600;
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--color-primary);
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -498,16 +503,16 @@ section {
     display: none;
     padding: 10px 0;
     margin: 10px 20px;
-    background-color: rgba(20, 35, 51, 0.6);
+    background-color: rgba(0, 0, 0, 0.6);
   }
 
-  .navbar .dropdown>.dropdown-active,
-  .navbar .dropdown .dropdown>.dropdown-active {
-    display: block;
-  }
+    .navbar .dropdown.dropdown-active ul,
+    .navbar .dropdown .dropdown.dropdown-active ul {
+        display: block;
+    }
 
   .mobile-nav-show {
-    color: rgba(255, 255, 255, 0.9);
+    color: var(--color-primary);
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -515,7 +520,7 @@ section {
   }
 
   .mobile-nav-hide {
-    color: rgba(255, 255, 255, 0.9);
+    color: var(--color-primary);
     font-size: 32px;
     cursor: pointer;
     line-height: 0;
@@ -538,7 +543,7 @@ section {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(27, 47, 69, 0.7);
+    background: rgba(0, 0, 0, 0.7);
     z-index: 9996;
   }
 }
